src/objects/Lnvoice__c.object
<CustomObject>
    <fields>
        <fullName>ActualAmount__c</fullName>
        <label>应收金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountSheets__c</fullName>
        <label>张数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingInformation__c</fullName>
        <label>增值税专用发票开票信息</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingPriceUnit__c</fullName>
        <label>开票单位</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BreakOrder__c</fullName>
        <label>是否拆分订单</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificate__c</fullName>
        <label>上传增值税一般纳税人证书</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>发票申请</relationshipLabel>
        <relationshipName>FPSQKH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateFill__c</fullName>
        <label>填表日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateIssue__c</fullName>
        <label>开票日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeliveryAddress__c</fullName>
        <label>邮寄地址</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>CreatedBy.LfourDepartment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>所在部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupClient__c</fullName>
        <label>是否集团客户</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InstallAcceptance__c</fullName>
        <label>是否安装验收</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InvoiceNumber__c</fullName>
        <label>发票编号</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceTitle__c</fullName>
        <label>发票抬头</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceType__c</fullName>
        <label>发票类型</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>订单</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>发票申请</relationshipLabel>
        <relationshipName>FPSQDD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <label>付款方式</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>收件人电话</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PostCode__c</fullName>
        <label>邮编</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preparer__c</fullName>
        <formula>CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>填表人</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceivableAmount__c</fullName>
        <label>回款金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recipients__c</fullName>
        <label>收件人</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>备注</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnedDate__c</fullName>
        <label>预计回款日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>快递单号</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhetherTheDelivery__c</fullName>
        <label>是否发货</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                    <default>true</default>
                    <label>是</label>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>发票申请</label>
    <nameField>
        <displayFormat>FP-{000000}</displayFormat>
        <label>发票申请编码</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>发票申请</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>